--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="https://github.com/spencerdispenced" target="_blank">Github</a>
+        <a class="nav-link" href="https://github.com/spencerdispenced/DailyQuotes_V2" target="_blank">Github</a>
         <a class="nav-link" href="https://www.linkedin.com/in/spencer-thomason-92577b180/" target="_blank">LinkedIn</a>
       </div>
     </div>
