--- a/src/views/users/confirmed.ejs
+++ b/src/views/users/confirmed.ejs
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-6 offset-3 justify-content-center">
         <%- include('../partials/flash') %>
-        <div class="alert alert-success" role="alert" data-cy="confirmed-card">
+        <div class="alert alert-success alert_box" role="alert" data-cy="confirmed-card">
           <h4 id="thanks" class="alert-heading">Thanks <%= user.name %> for signing up!</h4>
         
           <p><%= user.email %> is confirmed. You will start receiving Daily Quotes!</p>
