--- a/src/views/users/goodbye.ejs
+++ b/src/views/users/goodbye.ejs
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6 offset-3 justify-content-center">
-        <div class="alert alert-success" role="alert" data-cy="goodbye-msg">
+        <div class="alert alert-success alert_box" role="alert" data-cy="goodbye-msg">
           <h4 id="thanks" class="alert-heading">Sorry to see you go, you're dead to me now.</h4>
           
           <p>Successfully unsubscribed. You will no longer receive Daily Quotes. :(</p>
