--- a/src/views/users/pending.ejs
+++ b/src/views/users/pending.ejs
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6 offset-3 justify-content-center">
-        <div class="alert alert-info" role="alert" data-cy="pending-card">
+        <div class="alert alert-info alert_box" role="alert" data-cy="pending-card">
           <h4 id="thanks" class="alert-heading">Thanks <%= user.name %> for signing up!</h4>
       
           <p>Confirm your email: <%= user.email %> to begin receiving Daily Quotes!</p> 
