--- a/src/views/users/unsubscribe.ejs
+++ b/src/views/users/unsubscribe.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6 offset-3 justify-content-center">
-        <div class="alert alert-info" role="alert" data-cy="confirm-unsub-card">
+        <div class="alert alert-info alert_box" role="alert" data-cy="confirm-unsub-card">
           <h4 id="thanks" class="alert-heading" ><%= user.name %>, are you sure you want to unsubscribe?</h4>
           <p><%= user.email %> will be removed from the mailing list.</p>
           <form class="d-inline" action="/unsubscribe/<%= user.uuid %>?_method=DELETE" method="post">
