--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -110,7 +110,7 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
             <h5>Chad S.</h5>
-            <p class="font-weight-light mb-0">"DailyQuotes is amazing! It helped me get off meth and pursue my dreams 
+            <p class="font-weight-light mb-0">"DailyQuotes is amazing! It inspired me to pursue my dream 
               of being a stock photo model!"</p>
           </div>
         </div>
